--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-Flask==3.0.0
-Flask-Cors==4.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Mail==0.9.1
-Authlib==1.3.0
-requests==2.31.0
-python-dotenv==1.0.1
-gunicorn==21.2.0
-Werkzeug==3.0.1
-itsdangerous==2.1.2
-psycopg2-binary==2.9.9
+Flask
+Flask-Cors
+Flask-SQLAlchemy
+Flask-Mail
+Authlib
+requests
+python-dotenv
+gunicorn
+Werkzeug
