--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask
-Flask-Cors
-Flask-SQLAlchemy
-Flask-Mail
-Authlib
-requests
-python-dotenv
-gunicorn
-Werkzeug
+Flask==3.0.0
+Flask-Cors==4.0.0
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.25
+requests==2.31.0
+python-dotenv==1.0.1
+gunicorn==21.2.0
+Werkzeug==3.0.1
+psycopg2-binary==2.9.9
+
